@@ -1,0 +1,2 @@
+<!-- test infinite inclusion -->
+{{subst:infinite}}
