@@ -9,6 +9,7 @@ New Features:
   * Basic support for the #expr: parser function.  Only basic operations are
     supported (+, -, /, *) and parentheses must be used to ensure that the
     order of operations is followed.
+  * Support Mediawiki's {{subst:}} syntax.  Usage: {{subst:template}}.
   * Add the ability for sysadmins to create user accounts (hanspeterklapf).
   * Topic add/update is now significantly faster due to query refactoring
     and changes so that the search index is not re-optimized after every
